--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Invoice Processing</title>
+    <title>AMAZON TEXTRACT API</title>
     <style>
         body {
             font-family: Arial, sans-serif;
